working with chart

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
       <div class="countries">
         <label class="regionName" for=""></label>
         <select name="" class="countriesSelect"></select>
+        <div class="countryDetails">
+          <div class="flag"></div>
+        </div>
       </div>
     </div>
   </body>
